fixed z-index and rights

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -73,7 +73,7 @@ div{
     border-radius: 5px;
 }
 header{
-    z-index: 1;
+    z-index: 99;
     position: sticky;
     top: -1px;
     width: 100%;
